GH-8 Implement Friends
